load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "azurefiles",
    srcs = [
        "azurefiles.go",
        "azurefiles_unsupported.go",
    ],
    importpath = "github.com/rclone/rclone/backend/azurefiles",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fshttp",
            "//fs/hash",
            "//lib/encoder",
            "//lib/env",
            "//lib/readers",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//directory:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//file:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//fileerror:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//service:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//share:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fshttp",
            "//fs/hash",
            "//lib/encoder",
            "//lib/env",
            "//lib/readers",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//directory:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//file:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//fileerror:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//service:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//share:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fshttp",
            "//fs/hash",
            "//lib/encoder",
            "//lib/env",
            "//lib/readers",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//directory:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//file:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//fileerror:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//service:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//share:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fshttp",
            "//fs/hash",
            "//lib/encoder",
            "//lib/env",
            "//lib/readers",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//directory:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//file:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//fileerror:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//service:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//share:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fshttp",
            "//fs/hash",
            "//lib/encoder",
            "//lib/env",
            "//lib/readers",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//directory:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//file:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//fileerror:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//service:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//share:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fshttp",
            "//fs/hash",
            "//lib/encoder",
            "//lib/env",
            "//lib/readers",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//directory:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//file:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//fileerror:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//service:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//share:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fshttp",
            "//fs/hash",
            "//lib/encoder",
            "//lib/env",
            "//lib/readers",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//directory:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//file:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//fileerror:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//service:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//share:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fshttp",
            "//fs/hash",
            "//lib/encoder",
            "//lib/env",
            "//lib/readers",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//directory:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//file:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//fileerror:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//service:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//share:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fshttp",
            "//fs/hash",
            "//lib/encoder",
            "//lib/env",
            "//lib/readers",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//directory:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//file:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//fileerror:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//service:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//share:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fshttp",
            "//fs/hash",
            "//lib/encoder",
            "//lib/env",
            "//lib/readers",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//directory:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//file:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//fileerror:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//service:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//share:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fshttp",
            "//fs/hash",
            "//lib/encoder",
            "//lib/env",
            "//lib/readers",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//directory:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//file:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//fileerror:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//service:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//share:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fshttp",
            "//fs/hash",
            "//lib/encoder",
            "//lib/env",
            "//lib/readers",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//directory:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//file:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//fileerror:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//service:go_default_library",
            "@com_github_azure_azure_sdk_for_go_sdk_storage_azfile//share:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "azurefiles_test",
    srcs = [
        "azurefiles_internal_test.go",
        "azurefiles_test.go",
    ],
    embed = [":azurefiles"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//fstest/fstests",
            "@com_github_stretchr_testify//assert:go_default_library",
        ],
        "//conditions:default": [],
    }),
)
