load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cache",
    srcs = [
        "cache.go",
        "cache_unsupported.go",
        "directory.go",
        "handle.go",
        "object.go",
        "plex.go",
        "storage_memory.go",
        "storage_persistent.go",
    ],
    importpath = "github.com/rclone/rclone/backend/cache",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//backend/crypt",
            "//fs",
            "//fs/cache",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fspath",
            "//fs/hash",
            "//fs/operations",
            "//fs/rc",
            "//fs/walk",
            "//lib/atexit",
            "//lib/readers",
            "@com_github_patrickmn_go_cache//:go-cache",
            "@io_etcd_go_bbolt//:bbolt",
            "@org_golang_x_net//websocket",
            "@org_golang_x_time//rate",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//backend/crypt",
            "//fs",
            "//fs/cache",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fspath",
            "//fs/hash",
            "//fs/operations",
            "//fs/rc",
            "//fs/walk",
            "//lib/atexit",
            "//lib/readers",
            "@com_github_patrickmn_go_cache//:go-cache",
            "@io_etcd_go_bbolt//:bbolt",
            "@org_golang_x_net//websocket",
            "@org_golang_x_time//rate",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//backend/crypt",
            "//fs",
            "//fs/cache",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fspath",
            "//fs/hash",
            "//fs/operations",
            "//fs/rc",
            "//fs/walk",
            "//lib/atexit",
            "//lib/readers",
            "@com_github_patrickmn_go_cache//:go-cache",
            "@io_etcd_go_bbolt//:bbolt",
            "@org_golang_x_net//websocket",
            "@org_golang_x_time//rate",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//backend/crypt",
            "//fs",
            "//fs/cache",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fspath",
            "//fs/hash",
            "//fs/operations",
            "//fs/rc",
            "//fs/walk",
            "//lib/atexit",
            "//lib/readers",
            "@com_github_patrickmn_go_cache//:go-cache",
            "@io_etcd_go_bbolt//:bbolt",
            "@org_golang_x_net//websocket",
            "@org_golang_x_time//rate",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//backend/crypt",
            "//fs",
            "//fs/cache",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fspath",
            "//fs/hash",
            "//fs/operations",
            "//fs/rc",
            "//fs/walk",
            "//lib/atexit",
            "//lib/readers",
            "@com_github_patrickmn_go_cache//:go-cache",
            "@io_etcd_go_bbolt//:bbolt",
            "@org_golang_x_net//websocket",
            "@org_golang_x_time//rate",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//backend/crypt",
            "//fs",
            "//fs/cache",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fspath",
            "//fs/hash",
            "//fs/operations",
            "//fs/rc",
            "//fs/walk",
            "//lib/atexit",
            "//lib/readers",
            "@com_github_patrickmn_go_cache//:go-cache",
            "@io_etcd_go_bbolt//:bbolt",
            "@org_golang_x_net//websocket",
            "@org_golang_x_time//rate",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//backend/crypt",
            "//fs",
            "//fs/cache",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fspath",
            "//fs/hash",
            "//fs/operations",
            "//fs/rc",
            "//fs/walk",
            "//lib/atexit",
            "//lib/readers",
            "@com_github_patrickmn_go_cache//:go-cache",
            "@io_etcd_go_bbolt//:bbolt",
            "@org_golang_x_net//websocket",
            "@org_golang_x_time//rate",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//backend/crypt",
            "//fs",
            "//fs/cache",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fspath",
            "//fs/hash",
            "//fs/operations",
            "//fs/rc",
            "//fs/walk",
            "//lib/atexit",
            "//lib/readers",
            "@com_github_patrickmn_go_cache//:go-cache",
            "@io_etcd_go_bbolt//:bbolt",
            "@org_golang_x_net//websocket",
            "@org_golang_x_time//rate",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//backend/crypt",
            "//fs",
            "//fs/cache",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fspath",
            "//fs/hash",
            "//fs/operations",
            "//fs/rc",
            "//fs/walk",
            "//lib/atexit",
            "//lib/readers",
            "@com_github_patrickmn_go_cache//:go-cache",
            "@io_etcd_go_bbolt//:bbolt",
            "@org_golang_x_net//websocket",
            "@org_golang_x_time//rate",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//backend/crypt",
            "//fs",
            "//fs/cache",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fspath",
            "//fs/hash",
            "//fs/operations",
            "//fs/rc",
            "//fs/walk",
            "//lib/atexit",
            "//lib/readers",
            "@com_github_patrickmn_go_cache//:go-cache",
            "@io_etcd_go_bbolt//:bbolt",
            "@org_golang_x_net//websocket",
            "@org_golang_x_time//rate",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//backend/crypt",
            "//fs",
            "//fs/cache",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fspath",
            "//fs/hash",
            "//fs/operations",
            "//fs/rc",
            "//fs/walk",
            "//lib/atexit",
            "//lib/readers",
            "@com_github_patrickmn_go_cache//:go-cache",
            "@io_etcd_go_bbolt//:bbolt",
            "@org_golang_x_net//websocket",
            "@org_golang_x_time//rate",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//backend/crypt",
            "//fs",
            "//fs/cache",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/config/configstruct",
            "//fs/config/obscure",
            "//fs/fspath",
            "//fs/hash",
            "//fs/operations",
            "//fs/rc",
            "//fs/walk",
            "//lib/atexit",
            "//lib/readers",
            "@com_github_patrickmn_go_cache//:go-cache",
            "@io_etcd_go_bbolt//:bbolt",
            "@org_golang_x_net//websocket",
            "@org_golang_x_time//rate",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "cache_test",
    srcs = [
        "cache_internal_test.go",
        "cache_test.go",
        "cache_upload_test.go",
        "utils_test.go",
    ],
    embed = [":cache"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//backend/crypt",
            "//backend/drive",
            "//backend/local",
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/object",
            "//fs/operations",
            "//fstest",
            "//fstest/fstests",
            "//fstest/testy",
            "//lib/random",
            "//vfs/vfscommon",
            "@com_github_stretchr_testify//require",
            "@io_etcd_go_bbolt//:bbolt",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//backend/crypt",
            "//backend/drive",
            "//backend/local",
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/object",
            "//fs/operations",
            "//fstest",
            "//fstest/fstests",
            "//fstest/testy",
            "//lib/random",
            "//vfs/vfscommon",
            "@com_github_stretchr_testify//require",
            "@io_etcd_go_bbolt//:bbolt",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//backend/crypt",
            "//backend/drive",
            "//backend/local",
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/object",
            "//fs/operations",
            "//fstest",
            "//fstest/fstests",
            "//fstest/testy",
            "//lib/random",
            "//vfs/vfscommon",
            "@com_github_stretchr_testify//require",
            "@io_etcd_go_bbolt//:bbolt",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//backend/crypt",
            "//backend/drive",
            "//backend/local",
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/object",
            "//fs/operations",
            "//fstest",
            "//fstest/fstests",
            "//fstest/testy",
            "//lib/random",
            "//vfs/vfscommon",
            "@com_github_stretchr_testify//require",
            "@io_etcd_go_bbolt//:bbolt",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//backend/crypt",
            "//backend/drive",
            "//backend/local",
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/object",
            "//fs/operations",
            "//fstest",
            "//fstest/fstests",
            "//fstest/testy",
            "//lib/random",
            "//vfs/vfscommon",
            "@com_github_stretchr_testify//require",
            "@io_etcd_go_bbolt//:bbolt",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//backend/crypt",
            "//backend/drive",
            "//backend/local",
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/object",
            "//fs/operations",
            "//fstest",
            "//fstest/fstests",
            "//fstest/testy",
            "//lib/random",
            "//vfs/vfscommon",
            "@com_github_stretchr_testify//require",
            "@io_etcd_go_bbolt//:bbolt",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//backend/crypt",
            "//backend/drive",
            "//backend/local",
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/object",
            "//fs/operations",
            "//fstest",
            "//fstest/fstests",
            "//fstest/testy",
            "//lib/random",
            "//vfs/vfscommon",
            "@com_github_stretchr_testify//require",
            "@io_etcd_go_bbolt//:bbolt",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//backend/crypt",
            "//backend/drive",
            "//backend/local",
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/object",
            "//fs/operations",
            "//fstest",
            "//fstest/fstests",
            "//fstest/testy",
            "//lib/random",
            "//vfs/vfscommon",
            "@com_github_stretchr_testify//require",
            "@io_etcd_go_bbolt//:bbolt",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//backend/crypt",
            "//backend/drive",
            "//backend/local",
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/object",
            "//fs/operations",
            "//fstest",
            "//fstest/fstests",
            "//fstest/testy",
            "//lib/random",
            "//vfs/vfscommon",
            "@com_github_stretchr_testify//require",
            "@io_etcd_go_bbolt//:bbolt",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//backend/crypt",
            "//backend/drive",
            "//backend/local",
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/object",
            "//fs/operations",
            "//fstest",
            "//fstest/fstests",
            "//fstest/testy",
            "//lib/random",
            "//vfs/vfscommon",
            "@com_github_stretchr_testify//require",
            "@io_etcd_go_bbolt//:bbolt",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//backend/crypt",
            "//backend/drive",
            "//backend/local",
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/object",
            "//fs/operations",
            "//fstest",
            "//fstest/fstests",
            "//fstest/testy",
            "//lib/random",
            "//vfs/vfscommon",
            "@com_github_stretchr_testify//require",
            "@io_etcd_go_bbolt//:bbolt",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//backend/crypt",
            "//backend/drive",
            "//backend/local",
            "//fs",
            "//fs/config",
            "//fs/config/configmap",
            "//fs/object",
            "//fs/operations",
            "//fstest",
            "//fstest/fstests",
            "//fstest/testy",
            "//lib/random",
            "//vfs/vfscommon",
            "@com_github_stretchr_testify//require",
            "@io_etcd_go_bbolt//:bbolt",
        ],
        "//conditions:default": [],
    }),
)
