load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "drive",
    srcs = [
        "drive.go",
        "metadata.go",
        "upload.go",
    ],
    importpath = "github.com/rclone/rclone/backend/drive",
    visibility = ["//visibility:public"],
    deps = [
        "//fs",
        "//fs/cache",
        "//fs/config",
        "//fs/config/configmap",
        "//fs/config/configstruct",
        "//fs/config/obscure",
        "//fs/filter",
        "//fs/fserrors",
        "//fs/fshttp",
        "//fs/fspath",
        "//fs/hash",
        "//fs/operations",
        "//fs/walk",
        "//lib/dircache",
        "//lib/encoder",
        "//lib/env",
        "//lib/errcount",
        "//lib/oauthutil",
        "//lib/pacer",
        "//lib/readers",
        "@org_golang_google_api//drive/v2:drive",
        "@org_golang_google_api//drive/v3:drive",
        "@org_golang_google_api//googleapi",
        "@org_golang_google_api//option",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_oauth2//google",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "drive_test",
    srcs = [
        "drive_internal_test.go",
        "drive_test.go",
    ],
    embed = [":drive"],
    deps = [
        "//backend/local",
        "//fs",
        "//fs/filter",
        "//fs/fserrors",
        "//fs/hash",
        "//fs/operations",
        "//fs/sync",
        "//fstest",
        "//fstest/fstests",
        "//lib/random",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_api//drive/v3:drive",
        "@org_golang_google_api//googleapi",
    ],
)
