load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dropbox",
    srcs = [
        "batcher.go",
        "dropbox.go",
    ],
    importpath = "github.com/rclone/rclone/backend/dropbox",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/dropbox/dbhash",
        "//fs",
        "//fs/config",
        "//fs/config/configmap",
        "//fs/config/configstruct",
        "//fs/config/obscure",
        "//fs/fserrors",
        "//fs/hash",
        "//lib/batcher",
        "//lib/encoder",
        "//lib/oauthutil",
        "//lib/pacer",
        "//lib/readers",
        "@com_github_dropbox_dropbox_sdk_go_unofficial_v6//dropbox",
        "@com_github_dropbox_dropbox_sdk_go_unofficial_v6//dropbox/auth",
        "@com_github_dropbox_dropbox_sdk_go_unofficial_v6//dropbox/common",
        "@com_github_dropbox_dropbox_sdk_go_unofficial_v6//dropbox/files",
        "@com_github_dropbox_dropbox_sdk_go_unofficial_v6//dropbox/sharing",
        "@com_github_dropbox_dropbox_sdk_go_unofficial_v6//dropbox/team",
        "@com_github_dropbox_dropbox_sdk_go_unofficial_v6//dropbox/users",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

go_test(
    name = "dropbox_test",
    srcs = [
        "dropbox_internal_test.go",
        "dropbox_test.go",
    ],
    embed = [":dropbox"],
    deps = [
        "//fs",
        "//fstest/fstests",
        "@com_github_stretchr_testify//assert",
    ],
)
