load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "filefabric",
    srcs = ["filefabric.go"],
    importpath = "github.com/rclone/rclone/backend/filefabric",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/filefabric/api",
        "//fs",
        "//fs/config",
        "//fs/config/configmap",
        "//fs/config/configstruct",
        "//fs/fserrors",
        "//fs/fshttp",
        "//fs/hash",
        "//fs/log",
        "//lib/atexit",
        "//lib/dircache",
        "//lib/encoder",
        "//lib/pacer",
        "//lib/random",
        "//lib/rest",
    ],
)

go_test(
    name = "filefabric_test",
    srcs = ["filefabric_test.go"],
    deps = [
        ":filefabric",
        "//fstest/fstests",
    ],
)
