load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "filescom",
    srcs = ["filescom.go"],
    importpath = "github.com/rclone/rclone/backend/filescom",
    visibility = ["//visibility:public"],
    deps = [
        "//fs",
        "//fs/config",
        "//fs/config/configmap",
        "//fs/config/configstruct",
        "//fs/config/obscure",
        "//fs/fserrors",
        "//fs/fshttp",
        "//fs/hash",
        "//lib/encoder",
        "//lib/pacer",
        "@com_github_files_com_files_sdk_go_v3//:files-sdk-go",
        "@com_github_files_com_files_sdk_go_v3//bundle",
        "@com_github_files_com_files_sdk_go_v3//file",
        "@com_github_files_com_files_sdk_go_v3//filemigration",
        "@com_github_files_com_files_sdk_go_v3//folder",
        "@com_github_files_com_files_sdk_go_v3//session",
    ],
)

go_test(
    name = "filescom_test",
    srcs = ["filescom_test.go"],
    deps = [
        ":filescom",
        "//fstest/fstests",
    ],
)
